@@ -148,7 +148,7 @@ xmlns:cs="antlib:com.puppycrawl.tools.checkstyle.ant">
 
         <!-- test patch properties -->
     <property name="scratch.dir" value="${user.home}/tmp"/>
-    <property name="svn.cmd" value="svn"/>
+    <property name="git.cmd" value="git"/>
     <property name="grep.cmd" value="grep"/>
     <property name="patch.cmd" value="patch"/>
     <property name="make.cmd" value="make"/>
@@ -1591,7 +1591,7 @@ xmlns:cs="antlib:com.puppycrawl.tools.checkstyle.ant">
     		<arg value="DEVELOPER"/>
     		<arg value="${patch.file}"/>
     		<arg value="${scratch.dir}"/>
-    		<arg value="${svn.cmd}"/>
+    		<arg value="${git.cmd}"/>
     		<arg value="${grep.cmd}"/>
     		<arg value="${patch.cmd}"/>
     		<arg value="${findbugs.home}"/>
@@ -1609,7 +1609,7 @@ xmlns:cs="antlib:com.puppycrawl.tools.checkstyle.ant">
     		<arg value="${ps.cmd}"/>
     		<arg value="${wget.cmd}"/>
     		<arg value="${jiracli.cmd}"/>
-    		<arg value="${svn.cmd}"/>
+    		<arg value="${git.cmd}"/>
     		<arg value="${grep.cmd}"/>
     		<arg value="${patch.cmd}"/>
     		<arg value="${findbugs.home}"/>
