@@ -386,6 +386,9 @@ BUGFIXES:
   ZOOKEEPER-2576: After svn to git migration ZooKeeper Precommit jenkins job is failing
   (Patrick Hunt via rgs)
 
+  ZOOKEEPER-2576: Missing changes (cleanup build.xml)
+  (Patrick Hunt via rgs)
+
 IMPROVEMENTS:
   ZOOKEEPER-2024 Major throughput improvement with mixed workloads (Kfir Lev-Ari via shralex)
 
